tests/paczka1/fuzzy1/33881810.err
Error in line 4: 5Jya3 S632 53,8
Error in line 14: QGxCvljvJ0t A519 17,8
Error in line 13: UEuF S632 2,8
Error in line 22: QGxCvljvJ0t S632 49,4
Error in line 35: UEuF S632 97,51
Error in line 36: UEuF S258 7,2
Error in line 10: S258 S258 11,9
